Fri Dec 30 12:14:06 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/PortableServer.h:
          Added include of AdapterActivatorA.h

Thu Dec 29 13:37:22 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/ziop.mpb:
          ZIOP doesn't work with corba/e micro

Wed Dec 28 09:05:39 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Mixed_Sync_ASync_Events/test_i.cpp:
          Fixed compile error on OpenVMS

Tue Dec 27 11:42:55 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for next release

Tue Dec 27 10:06:28 CET 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO version 2.0.7 released.

Mon Dec 26 23:50:02 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tests/Skeleton_Inheritance/skel_inheritance.mpc:

          Fixed issues with parallel builds running tao_idl from the
          wrong project.

Sat Dec 24 11:56:39 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Mixed_Sync_ASync_Events/test_i.cpp:
          Fixed compile error on OpenVMS

Wed Dec 21 09:42:12 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * examples/RTCORBA/Activity/Activity.cpp:

          Added timer queue reset on global reactor instance.

Tue Dec 20 13:56:10 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/Portable_Interceptors/Processing_Mode_Policy/Collocated/PI_ProcMode_Collocated.mpc:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Remote/PI_ProcMode_Remote.mpc:
        * tests/Portable_Interceptors/Register_Initial_References/Register_ORBInitializer.mpc:
          Projects must avoid CORBA-e-micro.

Tue Dec 20 09:55:08 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tests/Time_Policy_Custom/Custom_Time_Policy_Strategy.cpp:

          Fixed incorrect export macro in class definition.

Mon Dec 19 18:58:16 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1330_Regression/client.cpp: